syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

message Product {
  string productId = 1;
  int64 quantity = 2;
}

// The greeting service definition.
service OrderService {
  // Sends a greeting
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}

service UserService {
  // Sends a greeting
  rpc GetFavorites(GetFavoritesRequest) returns (GetFavoritesResponse);
}

message GetOrdersRequest {}

message GetOrdersResponse {
  repeated Product products = 1;
}

message GetFavoritesRequest {}

message GetFavoritesResponse {
  repeated Product products = 1;
}